--- a/src/app/components/notification-list/notification-list.component.html
+++ b/src/app/components/notification-list/notification-list.component.html
@@ -1,3 +1,12 @@
+<nav class="navbar mb-5">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="assets/logo.png" alt="Logo" height="24" class="d-inline-block align-text-top">
+        Notification App
+      </a>
+    </div>
+  </nav>
+
 <div class="container ">
     <div class="row d-flex">
       <div *ngFor="let item of pessoas" class="mb-2">
