--- a/src/app/components/notification-list/notification-list.component.html
+++ b/src/app/components/notification-list/notification-list.component.html
@@ -5,7 +5,7 @@
         Notification App
       </a>
     </div>
-  </nav>
+</nav>
 
 <div class="container ">
     <div class="row d-flex">
@@ -24,3 +24,8 @@
       </div>
     </div>
   </div>
+
+
+<footer>
+    <p>© 2022 NotificationApp</p>
+</footer>
