--- a/src/app/components/notification-list/notification-list.component.css
+++ b/src/app/components/notification-list/notification-list.component.css
@@ -1,3 +1,16 @@
+* {
+    margin: 0;
+}
+
 .navbar {
     background-color: rgb(226, 225, 225);
+}
+
+footer {
+    background-color: rgb(226, 225, 225);
+    display: flex;
+    height: 75px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
 }
