--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
+<!-- Header -->
+<ntap-header></ntap-header>
+
+
+<!-- Main -->
 <ntap-notification-list></ntap-notification-list>
+
+
+<!-- Footer -->
+<ntap-footer></ntap-footer>
