--- a/src/app/components/notification-list/notification-list.component.html
+++ b/src/app/components/notification-list/notification-list.component.html
@@ -9,6 +9,13 @@
                 <p class="mb-0 opacity-75">{{ item.subtitulo }}</p>
                 <small class="mb-0 opacity-75">{{ item.data }}</small>
               </div>
+
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                  Lido
+                </label>
+              </div>
             </div>
           </a>
         </div>
