--- a/src/app/components/notification-list/notification-list.component.html
+++ b/src/app/components/notification-list/notification-list.component.html
@@ -2,7 +2,7 @@
     <div class="row d-flex">
       <div *ngFor="let item of notificacoes; let i = index" class="mb-2">
         <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true" [ngClass]="status ? 'check' : '' ">
+          <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true" [ngClass]="notificacoes[i].status ? 'check' : '' ">
             <div class="d-flex gap-2 w-100 justify-content-between">
               <div>
                 <p>{{ i }}</p>
@@ -12,7 +12,7 @@
               </div>
 
               <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" (click)="statusCheck()">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" (click)="statusCheck(i)">
                 <label class="form-check-label" for="flexCheckDefault">
                   Lido
                 </label>
