--- a/src/app/components/notification-list/notification-list.component.html
+++ b/src/app/components/notification-list/notification-list.component.html
@@ -1,25 +1,35 @@
-<div class="container ">
-    <div class="row d-flex">
-      <div *ngFor="let item of notificacoes; let i = index" class="mb-2">
-        <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true" [ngClass]="notificacoes[i].status ? 'check' : '' ">
-            <div class="d-flex gap-2 w-100 justify-content-between">
-              <div>
-                <p>{{ i }}</p>
-                <h6 class="mb-0">{{ item.titulo }}</h6>
-                <p class="mb-0 opacity-75">{{ item.subtitulo }}</p>
-                <small class="mb-0 opacity-75">{{ item.data }}</small>
-              </div>
-
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" (click)="statusCheck(i)">
-                <label class="form-check-label" for="flexCheckDefault">
-                  Lido
-                </label>
-              </div>
+<div class="container">
+  <div class="row d-flex">
+    <div *ngFor="let item of notificacoes; let i = index" class="mb-2">
+      <div class="list-group">
+        <a
+          href="#"
+          class="list-group-item list-group-item-action d-flex gap-3 py-3"
+          aria-current="true"
+          [ngClass]="notificacoes[i].status ? 'check' : ''"
+        >
+          <div class="d-flex gap-2 w-100 justify-content-between">
+            <div>
+              <h6 class="mb-0">{{ item.titulo }}</h6>
+              <p class="mb-0 opacity-75">{{ item.subtitulo }}</p>
+              <small class="mb-0 opacity-75">{{ item.data }}</small>
             </div>
-          </a>
-        </div>
+
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                value=""
+                id="flexCheckDefault"
+                (click)="statusCheck(i)"
+              />
+              <label class="form-check-label" for="flexCheckDefault">
+                Lido
+              </label>
+            </div>
+          </div>
+        </a>
       </div>
     </div>
+  </div>
 </div>
